# logdata-anomaly-miner

./: .bandit  .flake8  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  apparmor.profile  pyproject.toml  requirements.txt
aecid-testsuite/: Dockerfile  runAminerJsonInputDemo.sh  runAminerXmlInputDemo.sh  runBandit.sh  runFlake8.sh  runOfflineMode.sh  runRemoteControlTest.sh  runVulture.sh
aecid-testsuite/demo/aminer/: demo-config.yml
aecid-testsuite/docker/: Dockerfile_deb  Dockerfile_fed  Dockerfile_red
aecid-testsuite/integration/: aminerIntegrationTest2.sh  config21.py  config22.py  declarations.sh
aecid-testsuite/unit/: AnalysisComponentsPerformanceTest.py
aecid-testsuite/unit/analysis/: AllowlistViolationDetectorTest.py  AtomFiltersTest.py  EnhancedNewMatchPathValueComboDetectorTest.py  HistogramAnalysisTest.py  MatchValueStreamWriterTest.py  NewMatchIdValueComboDetectorTest.py  NewMatchPathDetectorTest.py  NewMatchPathValueComboDetectorTest.py  NewMatchPathValueDetectorTest.py  ParserCountTest.py  RulesTest.py  TimeCorrelationViolationDetectorTest.py  TimestampCorrectionFiltersTest.py  UnparsedAtomHandlersTest.py  VariableCorrelationDetectorTest.py  VariableTypeDetectorTest.py
aecid-testsuite/unit/data/: YamlConfigTest.py  config.py
aecid-testsuite/unit/events/: DefaultMailNotificationEventHandlerTest.py  JsonConverterHandlerTest.py  KafkaEventHandlerTest.py  ScoringEventHandlerTest.py  StreamPrinterEventHandlerTest.py  SyslogWriterEventHandlerTest.py  UtilsTest.py  (+1 more)
scripts/: aminer_install.sh  aminerwrapper.sh  testingwrapper.sh
(+33 files in other folders)
