[project]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.vulture]
exclude = ["^aecid-testsuite/", "*Interfaces.py", "*Interface.py"]
make_whitelist = true
min_confidence = 80
paths = ["source/root/usr/lib/logdata-anomaly-miner/"]
sort_by_size = true
verbose = false
